v7.16.0 - Backwards compatibility with old CSVs should (theoretically) now work - going forward, not for previous ones. - The state of the ore dict and values are now saved with each old CSV entry, and detected when loading it - Fixed background images taking up too much local storage - now only 1 is in local storage at a time, and compressed to WEBP for space savings - Blue Ice -> Larimar - Some value changes idk - :bobby:

--- a/src/styles/AllGradients.css
+++ b/src/styles/AllGradients.css
@@ -478,7 +478,7 @@
     background: #41809c;
 }
 
-.color-template-blue-ice {
+.color-template-larimar {
     background: #2a87de;
 }
 
